Bug: 42608 - ZCS toast is arbitrarily wide Set max width of 500 for toast, 400 for tooltips, so they wrap.
http://bugzilla.zimbra.com/show_bug.cgi?id=42608

Copied from Perforce
 Change: 218155

--- a/WebRoot/css/dwt.css
+++ b/WebRoot/css/dwt.css
@@ -121,6 +121,7 @@
 /* Body container (div) for the tooltip. */
 .DwtToolTipBody {
 	padding:2px;
+	max-width:400px;
 }
 
 /* Containers (divs) for the top and bottom pointers of the tooltips.
